--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tasks
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/tasks
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_mng
 spring.datasource.username=postgres
 spring.datasource.password=lephat96
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
